[metadata]
url = https://github.com/koromodako/datashark-plugin-linux
author = koromodako
author_email = koromodako@gmail.com
name = datashark-plugin-linux
description = Datashark Linux Forensics Plugin
long_description = file: README.md, LICENSE
keywords = datashark, plugin, linux, forensics
classifiers =
    Development Status :: 4 - Beta
    Framework :: Datashark
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Security
    Topic :: Utilities

[options]
packages = find:
install_requires =
    datashark-core

[options.entry_points]
datashark_plugin =
    linux = ds_p_linux.plugin:instanciate
console_scripts =
    datashark-plugin-linux-test = ds_p_linux.plugin:test
