[metadata]
url = https://github.com/koromodako/datashark-processors-linux
author = koromodako
author_email = koromodako@gmail.com
name = datashark-processors-linux
description = Datashark Linux Forensics Processors
long_description = file: README.md, LICENSE
keywords = datashark, processors, linux
classifiers =
    Development Status :: 4 - Beta
    Framework :: Datashark
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Security
    Topic :: Utilities

[options]
packages = find:
install_requires =
    datashark-core

[options.entry_points]
datashark_processors =
    linux_psort = datashark_processors_linux.psort:PSortProcessor
    linux_tskape = datashark_processors_linux.tskape:TSKAPEProcessor
    linux_binwalk = datashark_processors_linux.binwalk:BinwalkProcessor
    linux_foremost = datashark_processors_linux.foremost:ForemostProcessor
    linux_log2timeline = datashark_processors_linux.log2timeline:Log2TimelineProcessor
